; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_nt_io.c_ext2fs_check_if_mounted.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_nt_io.c_ext2fs_check_if_mounted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@EXT2_MF_MOUNTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_check_if_mounted(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %6, align 4
  %11 = load i32*, i32** %5, align 8
  store i32 0, i32* %11, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* @TRUE, align 4
  %14 = call i32 @_Ext2OpenDevice(i8* %12, i32 %13, i32* %9, i32* %7, i32* %8, i32* %10, i32* %6)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %3, align 4
  br label %32

18:                                               ; preds = %2
  %19 = load i32, i32* %9, align 4
  %20 = call i64 @_IsMounted(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* @EXT2_MF_MOUNTED, align 4
  br label %25

24:                                               ; preds = %18
  br label %25

25:                                               ; preds = %24, %22
  %26 = phi i32 [ %23, %22 ], [ 0, %24 ]
  %27 = load i32*, i32** %5, align 8
  %28 = load i32, i32* %27, align 4
  %29 = and i32 %28, %26
  store i32 %29, i32* %27, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @_CloseDisk(i32 %30)
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %25, %16
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @_Ext2OpenDevice(i8*, i32, i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @_IsMounted(i32) #1

declare dso_local i32 @_CloseDisk(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
